# enum_macros

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: custom_discriminant.rs  lib.rs  marker_type.rs  next_variant.rs  unwrap_variant.rs  utils.rs  variant_amount.rs
tests/: custom_discriminant.rs  main.rs  marker_type.rs  next_variant.rs  playground.rs  variant_amount.rs
tests/custom_discriminant/fail/: fn_pointer_discriminant.rs  fn_pointer_discriminant.stderr  function_call_discriminant.rs  function_call_discriminant.stderr  lifetime_in_discriminant_type.rs  lifetime_in_discriminant_type.stderr  missing_default.rs  missing_default.stderr  missing_discriminant.rs  missing_discriminant.stderr  missing_type.rs  missing_type.stderr  not_enum.rs  not_enum.stderr  static_as_discriminant.rs  static_as_discriminant.stderr  strange_discriminant_types.rs  strange_discriminant_types.stderr  type_mismatch.rs  type_mismatch.stderr
tests/custom_discriminant/pass/: block_discriminant.rs  const_as_discriminant.rs  empty.rs  extra_parens.rs  function_call_discriminant.rs  generic_discriminant_type.rs  macro_discriminant.rs  no_data.rs  path_discriminant.rs  ptr_discriminant.rs  shorthand_array_discriminant.rs  with_data.rs  with_data_generics_bounds_and_more.rs
tests/marker_type/fail/: duplicate_derives.rs  duplicate_derives.stderr  invalid_marker_generics.rs  invalid_marker_generics.stderr  misplaced_copy_clone.rs  misplaced_copy_clone.stderr  not_enum.rs  not_enum.stderr
tests/marker_type/pass/: arg_derive.rs  (+4 more)
tests/other/: macro_combinations.rs
(+31 files in other folders)
